--- a/Schoolistic Website/public_html/index.html
+++ b/Schoolistic Website/public_html/index.html
@@ -147,11 +147,11 @@
                         <!-- Counter -->
                         <div id="counter">
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="526">1</div>
+                                <div class="counter-value number-count" data-count="309">1</div>
                                 <div class="counter-info">Instagram<br>Followers</div>
                             </div>
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="1367">1</div>
+                                <div class="counter-value number-count" data-count="1528">1</div>
                                 <div class="counter-info">Podcast<br>Streams</div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Tarj Mecwan</a></p>
+                    <p class="p-small">Copyright © 2021 <a href="https://tarjmecwan.com">Tarj Mecwan</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
